# investigations

./: .gitignore  main.py  pyproject.toml
softmax/: .env.example  .gitignore  README.md  arch_config.py  benchmark.py  env.sh  pyproject.toml  run_kernel.py  setup.py
softmax/configs/archs/: sm_75.yml  sm_80.yml  sm_86.yml  sm_89.yml  sm_90.yml
softmax/csrc/: Makefile  binding.cpp  fused.cu  fusedBlock.cu  gpu.cu  kernel_config.h  naive.cu  online.cu  online_v2.cu  torchBind.cu  utils.h  warpReduction.cu  wr.cu
softmax/naive/: naive.cu  naive.py
softmax/scripts/: _bench_one.py  autotune.py  benchmark.sh  env.sh  gen_clangd.sh  gen_kernel_config.py  install_editable.sh  ncu_compare.py  ncu_dump_sass.sh  ncu_export_txt.sh  run_kernel.py  run_ncu_collect.sh  run_nsys_collect.sh
softmax/triton_kernels/: fused.py  liger.py  online.py
