[project]
name = "investigations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "notebook>=7.5.4",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "ruff>=0.15.5",
    "torch>=2.10.0",
    "triton>=3.6.0",
]
